# megaforce

./: .dependency-cruiser.cjs  .env.example  .env.template  .gitignore  .jscpd.json  .prettierignore  .prettierrc  AGENTS.md  API_USER_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  LOCAL_DEPLOYMENT.md  PLAN.md  README.md  add_social_comment_enum.sql  alembic.ini  biome.json  bts.jsonc  build-worker.sh  debug_rank_tweets.py  docker-compose.yml  eslint.config.mjs  examples.md  fix_owner_id_constraint.sql  knip.json  main.py  make_drafts.py  migrate_to_unified_documents.sql  netlify.toml  package.json  post_tweet.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_migration.py  run_owner_id_fix.py  test_docker_api_guide.sh  test_docker_comment_generation.sh  test_local_api_guide.sh  (+4 more)
.claude/: settings.json
.claude/skills/: linear-issue.md
.claude/skills/linear-issue/: SKILL.md
.claude/skills/safeword-bdd-orchestrating/: SKILL.md
.claude/skills/safeword-debugging/: SKILL.md
.claude/skills/safeword-refactoring/: SKILL.md
.cursor/: hooks.json  mcp.json
.safeword/: config.json  depcruise-config.cjs  eslint.config.mjs
agent_style_transfer/: .env.sample  main.py
agent_style_transfer/agent_style_transfer/: llm_provider_setup.py
agent_style_transfer/fixtures/: document-based-request.json  enhanced-style-request.json  linkedin-response.json  tweet-2-response.json  tweet-and-blog-request.json  tweet-and-blog-response.json  tweet-request.json  tweet-response.json
agent_style_transfer/scripts/: __init__.py  env_vault.py
agent_style_transfer/tests/: conftest.py  test_evaluator_utils.py
alembic/: env.py
alembic/versions/: 001_add_unified_document_model.py.backup  38062b60878b_migrating_columns_from_legacy_api.py  4181ba22a7c9_integrations_tables.py  5182be5c1f9f_initial_database_schema_with_all_models.py  93ec8eeaddc5_added_score_to_document.py  ad1d8726dc19_initial_schema.py  fix_outputtype_enum_values.py  fix_outputtype_enum_values.py.backup
api/: DATABASE_OPERATIONS.md  Dockerfile  Dockerfile.worker  README.md  alembic.ini  auth.py  celery_app.py  constants.py  database.py  docker-compose.yml  heroku.yml  main.py  migrate_enums.py  models.py  schemas.py  tasks.py
api/routers/: auth.py  documents.py  generation_runs.py  input_sources.py  integrations.py  jobs.py  outputs.py  personas.py  runs.py  settings.py  style.py  style_references.py  twitter.py  url.py
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/web/: index.html  package.json
common/: llm_provider_setup.py  schemas.py  utils.py
docs/: eden-setup.md
docs/database/: MEG-7-MIGRATION-GUIDE.md  SCHEMA-ANALYSIS.md
gherkin-spec/: 01-output-type-selection.feature  02-clarifying-questions.feature  03-persona-selection.feature  04-plan-creation-and-review.feature  05-research-and-outline.feature  06-content-generation.feature  07-session-management.feature  08-error-handling.feature  09-template-management.feature  10-integrations.feature  11-mcp-api.feature  QUICK-REFERENCE.md  README.md  SCENARIO-INDEX.md
legacy/: pyproject.toml
legacy/api-prev_ui/: Dockerfile  README.md  docker-compose.yml  main.py  models.py  schemas.py
legacy/api-prev_ui/alembic/: env.py
legacy/api-prev_ui/alembic/versions/: 001_add_unified_document_model.py
legacy/api-prev_ui/routers/: documents.py  style.py  twitter.py
legacy/api-prev_ui/scripts/: fix_document_classification.py
megaforce/: layout.tcss  main.py  make_drafts.py  schedule_drafts.py
megaforce/agent_style_transfer/: .env.test.vault  main.py  pyproject.toml
megaforce/agent_style_transfer/fixtures/: linkedin-request.json
megaforce/agent_style_transfer/scripts/: lint.sh
megaforce/agent_style_transfer/tests/: test_style_inference_evaluations.py  test_writing_style_inferrer.py
megaforce/agent_style_transfer/tests/cassettes/: test_evaluate_style_inference_accuracy_with_linkedin_documents.yaml  test_evaluate_style_rule_usefulness_with_linkedin_documents.yaml  test_evaluation_without_api_calls.yaml  test_infer_few_shot_examples.yaml  test_linkedin_fullstack_skills.yaml  test_single_tech_tweet.yaml
megaforce/common/: partials.py  schemas.py  utils.py  writers.py
megaforce/experiments/: scheduler.py
megaforce/style_agent/: agent.py  evaluation.py  llm_provider_setup.py  prompt_builder.py  schemas.py  writing_style_inferrer.py
next-ui/: .env.example  DEPLOYMENT.md  package.json.heroku
next-ui/app/: layout.tsx  page.tsx
next-ui/components/: api-client.ts  approval-queue.tsx  register-form.tsx  settings-panel.tsx  sidebar.tsx
parser_agents/reddit/: agent.py
parser_agents/x/: agent.py  schemas.py  tools.py
posting_agents/x/: agent.py
scripts/: check-eden-types.ts  fix_outputtype_enum_values.sql  start-local-postgres.sh  start-local-supabase.sh  stop-local.sh  test-local.sh
stream_agent/: main.py
stream_agent/agent_style_transfer/: README.md
style_agent/: agent.py  evaluation.py  prompt_builder.py  writing_style_inferrer.py
style_agent/evals/: __init__.py  content_preservation.py  platform_appropriateness.py  quality.py  style_fidelity.py  style_inference_accuracy.py  style_rule_usefulness.py
style_agent/utils/: __init__.py  content_extractor.py  evaluation.py
tests/: README.md  run_real_tests.py  test_api_guide.sh  test_docker_api_workflow.py  test_heroku_api.sh  test_parser_agent.py  test_password_update.py  test_personas_api.py  test_production_end_to_end.py  test_real_api.py  test_real_integration.py  test_style_agent.py  test_style_references_api.py
ui/: .cta.json  .gitignore  Dockerfile  README.md  entrypoint.sh  index.html  netlify.toml  next.config.mjs  nginx.conf.template  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  windsurf_deployment.yaml
ui/app/: layout.tsx  page.tsx
ui/components/: api-client.ts  approval-queue.tsx  auth-context.tsx  generate-content.tsx  login-form.tsx  main-dashboard.tsx  personas.tsx  register-form.tsx  sidebar.tsx  source-materials-old.tsx  source-materials.tsx  twitter-dashboard.tsx
ui/public/: manifest.json
ui/src/: main.tsx  routeTree.gen.ts
(+169 files in other folders)
