[project]
name = "agent-style-transfer"
version = "0.1.0"
description = "Agent that implements textual style transfer from pre-processed documents"
authors = [
    {name = "Regis Camimura", email = "regis@noctua-ff.dev"},
    {name = "Mateo Torres", email = "mateo@arcade.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "cryptography>=45.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-vcr>=1.0.2",
    "pytest-cov>=4.0.0",
    "vcrpy>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "cryptography>=3.4.0",
    "flake8>=6.0.0",
    "autoflake>=2.0.0",
    "pyupgrade>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__", ".pytest_cache", ".ruff_cache", "venv", "env", "ENV", "build", "dist", "*.egg-info"]
per-file-ignores = ["tests/*:S101,ANN001,ANN201,E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
encrypt-env = "scripts.env_vault:encrypt_env"
decrypt-env = "scripts.env_vault:decrypt_env"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
]
markers = [
    "asyncio: mark a test as an async test",
    "vcr: mark a test to record API calls",
    "integration: mark a test as an integration test requiring real API keys",
] 


